--- a/Visualizer/css/app.css
+++ b/Visualizer/css/app.css
@@ -1,4 +1,7 @@
 ﻿body {
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 14px;
+    font-weight: normal;
     height: 100vh;
     margin: 0;
     padding: 0;
@@ -12,7 +15,8 @@
 
 .uiHeader {
     flex: 0 0 auto;
-    margin: 10px 10px 0px 10px;
+    padding: 10px;
+    background-color: #EAEAEA;
 }
 
 .uiFooter {
@@ -27,7 +31,7 @@
     margin: 10px;
 }
 
-div.markup {
+.leftPane {
     display: flex;
     flex-flow: column;
     flex: 1 1 50%;
@@ -35,12 +39,7 @@ div.markup {
     margin-right: 10px;
 }
 
-div.markupFooter {
-    flex: 0 0 50px;
-    background-color: red;
-}
-
-div.markupRenderContainer {
+.rightPane {
     flex: 1 1 50%;
     overflow: auto;
     margin-left: 10px;
@@ -51,7 +50,7 @@ div.markupRender {
     margin-bottom: 20px;
 }
 
-div.markup #editor {
+#editor {
     flex: 1 1 auto;
     box-sizing: border-box;
     resize: none;
@@ -60,14 +59,39 @@ div.markup #editor {
     border: 1px solid #F1F1F1;
 }
 
-/*
-button.myButton:focus {
-    background-color: yellow;
-    height: 32px;
+button {
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border: none;
+    padding: 4px 10px 5px 10px;
+    min-width: 80px; 
+    text-align: center;
+    vertical-align: middle;  
+    cursor: default;
+    background-color: #0078D7;
+    color: white;    
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;
 }
 
-.myButton:focus:hover {
-    background-color: purple;
-    height: 32px;
+button:hover {
+    background-color: #005A9E;
 }
-*/
+
+button:active {
+    background-color: #004D84;
+}
+
+select {
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 14px;
+    border-color: #DDDDDD;
+    border-width: 2px;
+    border-style: solid;
+    padding: 2px 3px 3px 3px;
+}
