--- a/Visualizer/css/liveTile.css
+++ b/Visualizer/css/liveTile.css
@@ -107,7 +107,7 @@
 }
 
 .picture {
-    margin: 20px 0px 0px 0px;
+    margin: 5px 0px 0px 0px;
 }
 
 .picture.autoSize {
@@ -146,6 +146,23 @@ table.factGroup {
 
 tr.factGroupRowSpacer {
     height: 10px;
+}
+
+td.factName {
+    border-width: 0px;
+    padding: 0px;
+    border-style: none;
+    min-width: 100px;
+    vertical-align: top;
+    white-space: nowrap;
+}
+
+td.factValue {
+    border-width: 0px;
+    padding: 0px;
+    border-style: none;
+    vertical-align: top;
+    padding: 0px 0px 0px 10px
 }
 
 .pictureGallery {
