--- a/Visualizer/css/teamsConnectorCard.css
+++ b/Visualizer/css/teamsConnectorCard.css
@@ -148,6 +148,23 @@ tr.factGroupRowSpacer {
     height: 10px;
 }
 
+td.factName {
+    border-width: 0px;
+    padding: 0px;
+    border-style: none;
+    min-width: 100px;
+    vertical-align: top;
+    white-space: nowrap;
+}
+
+td.factValue {
+    border-width: 0px;
+    padding: 0px;
+    border-style: none;
+    vertical-align: top;
+    padding: 0px 0px 0px 10px
+}
+
 .pictureGallery {
     margin: 20px 0px 0px 0px;
 }
