added semantic text coloring: good, warning, attention

--- a/Visualizer/css/skypeCard.css
+++ b/Visualizer/css/skypeCard.css
@@ -103,11 +103,23 @@
 }
 
 .text.accentColor {
-    color:  rgb(46, 137, 252);
+    color: rgb(46, 137, 252);
 }
 
 .text.accentColor.subtle {
     color:  rgba(46, 137, 252, 0.5);
+}
+
+.text.goodColor {
+    color: #2ccc35;
+}
+
+.text.warningColor {
+    color: #f9a203;
+}
+
+.text.attentionColor {
+    color: darkred;
 }
 
 .rootContainer {
