--- a/Visualizer/css/outlookConnectorCard.css
+++ b/Visualizer/css/outlookConnectorCard.css
@@ -94,6 +94,18 @@
     color:  rgba(46, 137, 252, 0.5);
 }
 
+.text.goodColor {
+    color: #2ccc35;
+}
+
+.text.warningColor {
+    color: #f9a203;
+}
+
+.text.attentionColor {
+    color: darkred;
+}
+
 .rootContainer {
     padding: 20px;
 }
