Simplifying spacing Remove topSpacing property Now spacing is solely controlled by using sections

--- a/Visualizer/css/liveTile.css
+++ b/Visualizer/css/liveTile.css
@@ -195,7 +195,10 @@ td.factValue {
 }
 
 .columnGroup {
-    margin: 5px 0px 5px 0px;
+    margin: 15px 0px 5px 0px;
+}
+
+.column {
 }
 
 .columnSpacer {
@@ -307,7 +310,7 @@ Other styles that can be specified:
     .linkButton.expanded:active
 */
 
-textarea.textInput {
+.textInput {
     font-family: 'Segoe UI', sans-serif;
     font-size: 14px;
     border-color: #EAEAEA;
@@ -318,7 +321,7 @@ textarea.textInput {
     resize: none;
 }
 
-input.dateInput {
+.dateInput {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -326,7 +329,7 @@ input.dateInput {
     padding: 4px 8px 5px 8px;
 }
 
-input.timeInput {
+.timeInput {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -334,7 +337,7 @@ input.timeInput {
     padding: 4px 8px 5px 8px;
 }
 
-select.multichoiceInput {
+.multichoiceInput {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
