--- a/Visualizer/css/outlookConnectorCard.css
+++ b/Visualizer/css/outlookConnectorCard.css
@@ -194,6 +194,9 @@ td.factValue {
     margin: 20px 0px 0px 0px;
 }
 
+.column {
+}
+
 .columnSpacer {
     width: 10px;    
 }
@@ -303,7 +306,7 @@ Other styles that can be specified:
     .linkButton.expanded:active
 */
 
-textarea.textInput {
+.textInput {
     font-family: 'Segoe UI', sans-serif;
     font-size: 14px;
     border-color: #EAEAEA;
@@ -314,7 +317,7 @@ textarea.textInput {
     resize: none;
 }
 
-input.dateInput {
+.dateInput {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -322,7 +325,7 @@ input.dateInput {
     padding: 4px 8px 5px 8px;
 }
 
-input.timeInput {
+.timeInput {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -330,7 +333,7 @@ input.timeInput {
     padding: 4px 8px 5px 8px;
 }
 
-select.multichoiceInput {
+.multichoiceInput {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
