--- a/Visualizer/css/skypeCard.css
+++ b/Visualizer/css/skypeCard.css
@@ -210,6 +210,9 @@ td.factValue {
     margin: 15px 0px 5px 0px;
 }*/
 
+.column {
+}
+
 .columnSpacer {
     width: 10px;    
 }
@@ -319,7 +322,7 @@ Other styles that can be specified:
     .linkButton.expanded:active
 */
 
-textarea.textInput {
+.textInput {
     font-family: 'Segoe UI', sans-serif;
     font-size: 14px;
     border-color: #EAEAEA;
@@ -330,7 +333,7 @@ textarea.textInput {
     resize: none;
 }
 
-input.dateInput {
+.dateInput {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -338,7 +341,7 @@ input.dateInput {
     padding: 4px 8px 5px 8px;
 }
 
-input.timeInput {
+.timeInput {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
@@ -346,7 +349,7 @@ input.timeInput {
     padding: 4px 8px 5px 8px;
 }
 
-select.multichoiceInput {
+.multichoiceInput {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
