--- a/css/outlookConnectorCard.css
+++ b/css/outlookConnectorCard.css
@@ -37,7 +37,7 @@
 
 .text.medium {
     font-size: 20px;
-    margin: -8px 0px 5px 0px;
+    margin: -6px 0px 5px 0px;
 }
 
 .text.large {
@@ -104,6 +104,10 @@
 
 .text.attentionColor {
     color: darkred;
+}
+
+.headerContainer {
+    padding: 20px 20px 0px 20px;
 }
 
 .rootContainer {
@@ -175,10 +179,6 @@ td.factValue {
 
 .imageGallery {
     margin: 20px 0px 0px 0px;
-}
-
-.input {
-    margin: 10px 0px 0px 0px;
 }
 
 .separator {
@@ -306,15 +306,23 @@ Other styles that can be specified:
     .linkButton.expanded:active
 */
 
-.textInput {
+.input {
+    margin: 10px 0px 0px 0px;
+}
+
+.input.textInput {
     font-family: 'Segoe UI', sans-serif;
     font-size: 14px;
     border-color: #EAEAEA;
     border-width: 1px;
     border-style: solid;
     padding: 4px 8px 4px 8px;
-    height: 72px;
+    height: 30px;
     resize: none;
+}
+
+.input.textInput.multiline {
+    height: 72px;
 }
 
 .dateInput {
@@ -333,10 +341,22 @@ Other styles that can be specified:
     padding: 4px 8px 5px 8px;
 }
 
-.multichoiceInput {
+.input.multichoiceInput {
     font-family: 'Segoe UI', sans-serif;
     border-color: #EAEAEA;
     border-width: 1px;
     border-style: solid;
     padding: 4px 8px 6px 8px;
+}
+
+.input.toggleInput {
+    float: left;
+}
+
+.input.toggleInputLabel {
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 14px;
+    margin-top: -3px;
+    margin-left: 6px;
+    float: left;
 }
