--- a/Visualizer/css/cortanaCar.css
+++ b/Visualizer/css/cortanaCar.css
@@ -2,6 +2,16 @@
     box-sizing: border-box;
 }
 
+.cortanaLogo {
+    width: 50px;
+}
+
+.title {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 .stretch {
     width: 100%;
 }
@@ -26,32 +36,22 @@
 
 .text.defaultSize {
     font-size: 14px;
-    margin: -5px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.small {
     font-size: 12px;
-    margin: -4px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.medium {
     font-size: 20px;
-    margin: -8px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.large {
     font-size: 24px;
-    margin: -9px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.extraLarge {
     font-size: 30px;
-    margin: -11px 0px 5px 0px;
-    padding: 0px 0px 0px 0px;
 }
 
 .text.lighter {
@@ -112,12 +112,13 @@
 
 .rootContainer {
     width: 300px;
+    height: 300px;
     background: black;
     padding: 10px 12px;
 }
 
 .container {
-    margin: 20px 0px 0px 0px;
+    margin: 5px 0px 0px 0px;
 }
 
 .image {
