--- a/WpfVisualizer/MainWindow.xaml
+++ b/WpfVisualizer/MainWindow.xaml
@@ -6,6 +6,93 @@
         xmlns:local="clr-namespace:WpfVisualizer"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
+    
+    <Window.Resources>
+        
+        <!-- adaptive card Styling -->
+        <Style x:Key="Adaptive.Card" TargetType="Grid">
+            <Setter Property="Margin" Value="8"/>
+            <Setter Property="Background" Value="WhiteSmoke"/>
+        </Style>
+
+        <Style x:Key="Adaptive.Container" TargetType="Grid">
+            <Setter Property="Margin" Value="0,4,0,4"/>
+        </Style>
+
+        <Style x:Key="Adaptive.ColumnGroup" TargetType="Grid">
+            <Setter Property="Margin" Value="0,4,0,4"/>
+        </Style>
+
+        <Style x:Key="Adaptive.FactGroup" TargetType="Grid">
+            <Setter Property="Margin" Value="0,4,0,4"/>
+        </Style>
+
+        <Style x:Key="Adaptive.Fact.Name" TargetType="TextBlock">
+            <Setter Property="Margin" Value="2, 2, 10, 2"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+        </Style>
+
+        <Style x:Key="Adaptive.Fact.Value" TargetType="TextBlock">
+            <Setter Property="Margin" Value="2"/>
+        </Style>
+
+        <Style x:Key="Adaptive.Column" TargetType="Grid">
+            <Setter Property="Margin" Value="4,0,4,0"/>
+        </Style>
+
+        <Style x:Key="Adaptive.Seperator" TargetType="Separator">
+            <Setter Property="Margin" Value="4"/>
+        </Style>
+
+        <Style x:Key="Adaptive.Image" TargetType="Image">
+            <Setter Property="Margin" Value="4"/>
+        </Style>
+        
+        <Style x:Key="Adaptive.Image.Small" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
+            <Setter Property="Width" Value="75"/>
+            <Setter Property="Height" Value="75"/>
+        </Style>
+
+        <Style x:Key="Adaptive.Image.Medium" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="Height" Value="150"/>
+        </Style>
+
+        <Style x:Key="Adaptive.Image.Large" TargetType="Image" BasedOn="{StaticResource Adaptive.Image}">
+            <Setter Property="Width" Value="300"/>
+            <Setter Property="Height" Value="300"/>
+        </Style>
+
+        <Style x:Key="Adaptive.ImageGallery" TargetType="ListBox">
+            <Setter Property="Margin" Value="0,4,0,4"/>
+        </Style>
+
+        <Style x:Key="Adaptive.TextBlock" TargetType="TextBlock" >
+            
+        </Style>
+
+        <Style x:Key="Adaptive.TextBlock.Small" TargetType="TextBlock" BasedOn="{StaticResource Adaptive.TextBlock}">
+            <Setter Property="FontSize" Value="10"/>
+        </Style>
+
+        <Style x:Key="Adaptive.TextBlock.Normal" TargetType="TextBlock" BasedOn="{StaticResource Adaptive.TextBlock}">
+            <Setter Property="FontSize" Value="12"/>
+        </Style>
+
+        <Style x:Key="Adaptive.TextBlock.Medium" TargetType="TextBlock" BasedOn="{StaticResource Adaptive.TextBlock}">
+            <Setter Property="FontSize" Value="14"/>
+        </Style>
+
+        <Style x:Key="Adaptive.TextBlock.Large" TargetType="TextBlock" BasedOn="{StaticResource Adaptive.TextBlock}">
+            <Setter Property="FontSize" Value="17"/>
+        </Style>
+
+        <Style x:Key="Adaptive.TextBlock.ExtraLarge" TargetType="TextBlock" BasedOn="{StaticResource Adaptive.TextBlock}">
+            <Setter Property="FontSize" Value="20"/>
+        </Style>
+
+    </Window.Resources>
+    
     <Grid Margin="8">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -14,8 +101,11 @@
 
         <TextBox AcceptsReturn="True" AcceptsTab="True" Name="textBox" TextChanged="textBox_TextChanged"></TextBox>
 
-        <Border BorderBrush="Black" Grid.Column="1">
-            <Grid Name="card" />
+        <Border Margin="68,67,60,67"  CornerRadius="20" Grid.Column="1" VerticalAlignment="Top" >
+            <Border.Effect>
+                <DropShadowEffect />
+            </Border.Effect >
+            <Grid Name="card" Background="WhiteSmoke" MaxWidth="700"/>
         </Border>
     </Grid>
 </Window>
